--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "nodemon src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nanoid": "^4.0.2"
+    "express-handlebars": "^7.0.7",
+    "nanoid": "^4.0.2",
+    "socket.io": "^4.6.1"
   }
 }
