--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "mongoose": "^7.2.3",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "socket.io": "^4.6.1"
   }
