--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "mongoose-paginate-v2": "^1.7.1",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.6.1"
   }
 }
