--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "node ./src/app.js --mode PRODUCTION",
+    "dev": "nodemon ./src/app.js --mode DEVELOPMENT"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "commander": "^11.0.0",
     "connect-mongo": "^5.0.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
