Implementacion de logger y ajustes al factory

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,6 @@
 PORT = 
 MONGO_URL = 
+SESSION_SECRET = 
 ADMIN_NAME = 
 ADMIN_PASSWORD = 
 GITHUB_CLIENT_SECRET = 
@@ -9,3 +10,4 @@ GOOGLE_PASS =
 TWILIO_ACCOUNT_SID = 
 TWILIO_AUTH_TOKEN = 
 TWILIO_PHONE_NUMBER =
+WINSTON_LOGGER = 
