--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./src/app.js --mode PRODUCTION",
-    "dev": "nodemon -e yaml,js ./src/app.js --mode DEVELOPMENT"
+    "dev": "nodemon -e yaml,js ./src/app.js --mode DEVELOPMENT",
+    "test": "mocha test/supertest.test.js"
   },
   "keywords": [],
   "author": "",
@@ -36,5 +37,10 @@
     "swagger-ui-express": "^5.0.0",
     "twilio": "^4.14.1",
     "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
