--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node ./src/app.js --mode PRODUCTION",
     "dev": "nodemon -e yaml,js ./src/app.js --mode DEVELOPMENT",
-    "test": "mocha test/supertest.test.js"
+    "test": "mocha test/api.test.js"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +36,7 @@
     "socket.io": "^4.6.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "toastify-js": "^1.12.0",
     "twilio": "^4.14.1",
     "winston": "^3.10.0"
   },
