--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node ./src/app.js --mode PRODUCTION",
+    "qa": "node ./src/app.js --mode QA",
     "dev": "nodemon -e yaml,js ./src/app.js --mode DEVELOPMENT",
     "test": "mocha test/api.test.js"
   },
